--- a/sass/partials/_elements.scss
+++ b/sass/partials/_elements.scss
@@ -4,6 +4,11 @@
 
 .logo_login {
   padding-top: 3.5rem;
+
+  img {
+    width: 75px;
+    margin: auto;
+  }
 }
 .btn_to_login {
   margin: 0 auto;
@@ -157,6 +162,7 @@ canvas,
 
 video {
   width: 350px;
+  height: 300px;
   background: black;
 }
 
