--- a/sass/partials/_elements.scss
+++ b/sass/partials/_elements.scss
@@ -2,14 +2,17 @@
   background-color: $color_nav_icon_active;
 }
 
-.logo_login {
-  padding-top: 3.5rem;
+#tenexform {
+  .logo_login {
+    padding-top: 3.5rem;
 
-  img {
-    width: 75px;
-    margin: auto;
+    img {
+      width: 75px;
+      margin: auto;
+    }
   }
 }
+
 .btn_to_login {
   margin: 0 auto;
   width: calc(100% - 2rem);
@@ -37,7 +40,7 @@
 }
 
 input:focus {
-  outline: #81B7AE;
+  outline: #81b7ae;
 }
 
 /* New request button styling */
@@ -59,6 +62,8 @@ input:focus {
   z-index: 100;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   backdrop-filter: blur(0.5rem);
   background-color: rgba(0, 0, 0, 0.6);
 }
@@ -213,6 +218,26 @@ video {
   }
 }
 
+.controls {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  #acceptCamera {
+    margin-top: 1rem;
+    background-color: #dcebe9;
+    border: 1px solid #e0e0e0;
+    color: #4f4f4f;
+    border-radius: 2rem;
+    padding: 0.5rem 1rem;
+  }
+  #selectCamera {
+    border-radius: 2rem;
+    border: 1px solid #4f4f4f;
+    padding: 0.5rem;
+  }
+}
+
 .statusProgressSent {
   height: 25%;
   background-color: $req_orange;
@@ -304,7 +329,6 @@ video {
   width: 12rem;
 }
 
-
 .arrow {
   transition: all 0.3s ease;
   transform: rotate(0deg);
@@ -312,6 +336,68 @@ video {
 
 .rotate {
   transform: rotate(90deg);
+}
+
+// Request submit acknowledgement
+.acknowledgement_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  backdrop-filter: blur(0.5rem);
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.ack_content_wrapper {
+  background: #f4f4f4;
+  width: calc(100% - 2rem);
+  height: 40%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem 3rem;
+  border-radius: 0.5rem;
+}
+
+.ack_illustration {
+  align-self: center;
+}
+
+.ack_header {
+  align-self: center;
+  color: #219653;
+  margin-top: 0.5rem;
+  font-size: 24px;
+  font-family: $font_body;
+}
+
+.ack_detail_header {
+  align-self: flex-start;
+  text-transform: uppercase;
+  font-family: $font_body;
+  font-size: 1rem;
+  margin-top: 1.5rem;
+}
+
+.ack_req_type {
+  margin-top: 1rem;
+}
+
+.ack_req_type,
+.ack_req_sub {
+  align-self: flex-start;
+  font-family: $font_body;
+  font-size: 14px;
+  line-height: 150%;
 }
 
 // ******************** Notification Offline Illustration **********************
