Final Polished version for presentation demo

--- a/sass/partials/_posts-pages.scss
+++ b/sass/partials/_posts-pages.scss
@@ -332,10 +332,15 @@
   flex-flow: column nowrap;
   justify-content: space-between;
   align-items: flex-end;
+  position: relative;
 }
 
 .newBookingCard_date_for {
-  transform: translate(-18px, -52px);
+  position: absolute;
+  top: 20%;
+  left: 46%;
+  right: 55%;
+  bottom: 80%;
   text-align: center;
   height: 0;
 }
@@ -703,9 +708,9 @@ svg {
   margin: auto;
 }
 
-.main_btn {
+#chat_btn {
   background-color: rgba(0, 0, 0, 0);
-  right: 0;
+  right: 6px;
   bottom: 3.75rem;
   position: fixed;
 }
