Fixed fonts fall back to sans-serif

--- a/sass/partials/variables/_fonts.scss
+++ b/sass/partials/variables/_fonts.scss
@@ -28,11 +28,10 @@
   src: url(../../../assets/fonts/RobotoMono-Regular.ttf);
 }
 
-$font_welcome: futuraBold, serif;
-$font_h2: futuraMedium, serif;
-$font_h3: SFProDisplaySemibold, serif;
-$font_body: SFProDisplayRegular, serif;
-$font_light: SFProDisplayLight, serif;
-$font_date_posted: SFProDisplayRegular, serif;
+$font_welcome: futuraBold, sans-serif;
+$font_h2: futuraMedium, sans-serif;
+$font_h3: SFProDisplaySemibold, sans-serif;
+$font_body: SFProDisplayRegular, sans-serif;
+$font_light: SFProDisplayLight, sans-serif;
+$font_date_posted: SFProDisplayRegular, sans-serif;
 $font_booking_date: RobotoMono, monospace;
-// $font_sans: helvetica, arial, sans-serif;
